--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,10 @@
-pip
-streamlit
-pandas
-plotly
-matplotlib
-datetime
-numpy
-lightgbm
-pickle
-PIL
-glob
-cv2
-sklearn
-scipy
+streamlit==1.44.1
+pandas==2.2.3
+plotly==6.0.1
+matplotlib==3.10.1
+numpy==2.0.1
+lightgbm==4.6.0
+pickleshare==0.7.5
+pillow==11.1.0
+scikit-learn==1.6.1
+scipy==1.15.2
